# mc-clone

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mc-clone.sln
mc-clone/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp  mc-clone.vcxproj  mc-clone.vcxproj.filters
mc-clone/RM/: ResourceManager.h
mc-clone/res/shaders/: blockF.glsl  fragment.glsl  vertex.glsl
mc-clone/src/: main.cpp
mc-clone/src/Camera/: Camera.cpp  Camera.hpp
mc-clone/src/Chunk/: Chunk.cpp  Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp
mc-clone/src/Display/: Display.cpp  Display.h
mc-clone/src/Entity/: Entity.hpp
mc-clone/src/Mesh/: Mesh.cpp  Mesh.h  Mesh.hpp
mc-clone/src/RM/: ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp
mc-clone/src/Renderer/: ChunkRenderer.cpp  ChunkRenderer.hpp  Renderer.cpp  Renderer.h  Renderer.hpp
mc-clone/src/Shader/: Shader.cpp  Shader.h  Shader.hpp
mc-clone/src/Texture/: Texture.cpp  Texture.h  Texture.hpp
mc-clone/src/Utils/: Utils.cpp  Utils.h  Utils.hpp
res/shaders/: blockV.glsl  transparentF.glsl
src/: main.cpp
src/Camera/: Camera.cpp
src/Chunk/: Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp
src/Display/: Display.cpp  Display.hpp
src/Entity/: Entity.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp
src/RM/: ResourceManager.cpp
src/Renderer/: ChunkRenderer.cpp  ChunkRenderer.hpp  Renderer.cpp  Renderer.hpp
src/Shader/: Shader.cpp
src/Texture/: Texture.cpp  Texture.hpp
src/Utils/: Utils.cpp
